// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validateRequiredOptions should throw when accessToken is empty 1`] = `
"Invalid option \\"accessToken\\"

You can add it with either:
 - Config file: \\"/myHomeDir/.backport/config.json\\". Read more: https://github.com/sqren/backport/blob/1bd66ad5705a8e80501290ac7456e04108cb34be/docs/configuration.md#global-config-backportconfigjson
 - CLI: \\"--accessToken myAccessToken\\""
`;

exports[`validateRequiredOptions should throw when accessToken is missing 1`] = `
"Invalid option \\"accessToken\\"

You can add it with either:
 - Config file: \\"/myHomeDir/.backport/config.json\\". Read more: https://github.com/sqren/backport/blob/1bd66ad5705a8e80501290ac7456e04108cb34be/docs/configuration.md#global-config-backportconfigjson
 - CLI: \\"--accessToken myAccessToken\\""
`;

exports[`validateRequiredOptions should throw when both branches and branchChoices are missing 1`] = `
"Invalid option \\"branches\\"

You can add it with either:
 - Config file: \\".backportrc.json\\". Read more: https://github.com/sqren/backport/blob/1bd66ad5705a8e80501290ac7456e04108cb34be/docs/configuration.md#project-config-backportrcjson
 - CLI: \\"--branches 6.1\\""
`;

exports[`validateRequiredOptions should throw when upstream is empty 1`] = `
"Invalid option \\"upstream\\"

You can add it with either:
 - Config file: \\".backportrc.json\\". Read more: https://github.com/sqren/backport/blob/1bd66ad5705a8e80501290ac7456e04108cb34be/docs/configuration.md#project-config-backportrcjson
 - CLI: \\"--upstream elastic/kibana\\""
`;

exports[`validateRequiredOptions should throw when upstream is missing 1`] = `
"Invalid option \\"upstream\\"

You can add it with either:
 - Config file: \\".backportrc.json\\". Read more: https://github.com/sqren/backport/blob/1bd66ad5705a8e80501290ac7456e04108cb34be/docs/configuration.md#project-config-backportrcjson
 - CLI: \\"--upstream elastic/kibana\\""
`;

exports[`validateRequiredOptions should throw when username is empty 1`] = `
"Invalid option \\"username\\"

You can add it with either:
 - Config file: \\"/myHomeDir/.backport/config.json\\". Read more: https://github.com/sqren/backport/blob/1bd66ad5705a8e80501290ac7456e04108cb34be/docs/configuration.md#global-config-backportconfigjson
 - CLI: \\"--username sqren\\""
`;

exports[`validateRequiredOptions should throw when username is missing 1`] = `
"Invalid option \\"username\\"

You can add it with either:
 - Config file: \\"/myHomeDir/.backport/config.json\\". Read more: https://github.com/sqren/backport/blob/1bd66ad5705a8e80501290ac7456e04108cb34be/docs/configuration.md#global-config-backportconfigjson
 - CLI: \\"--username sqren\\""
`;
